# yipitdata-takehome

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/agents/: backend-review.md  data-security-review.md  frontend-review.md  mcp-review.md
.claude/skills/end-session/: SKILL.md
.claude/skills/review-pass/: SKILL.md
.claude/skills/start-session/: SKILL.md
.claude/skills/study-module/: SKILL.md
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  analytics.py  config.py  db.py  errors.py  log_config.py  main.py  middleware.py  models.py  periods.py  schemas.py  seed.py  service.py
backend/app/routers/: __init__.py  companies.py  estimates.py  health.py  kpis.py  overview.py
backend/tests/: __init__.py  conftest.py  test_analytics.py  test_api_smoke.py  test_seed.py  test_service_companies.py  test_service_publish.py  test_service_qtd.py  test_service_series.py
data/: kpi_sample_2000.csv
docs/: architecture.md  design-system.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AnalyticsRow.tsx  DateRangeFilter.tsx  ErrorState.tsx  ExportButton.tsx  HistoryChart.tsx  KpiChart.tsx  LoadingState.tsx  PeriodFilter.tsx  QtdChart.tsx  SearchBar.tsx  Sparkline.tsx  SummaryCard.tsx  TimestampBadge.tsx  TrendBadge.tsx  TrendValue.tsx
frontend/src/hooks/: useApi.ts  useDebounce.ts
frontend/src/lib/: chartData.test.ts  chartData.ts  chartTheme.ts  exportCsv.test.ts  exportCsv.ts  format.test.ts  format.ts  periodPresets.test.ts  periodPresets.ts  quarters.test.ts  quarters.ts
frontend/src/pages/: CompanyPage.tsx  DirectoryPage.tsx  NotFoundPage.tsx  OverviewPage.tsx  SeriesPage.tsx
mcp/: pyproject.toml  server.py
mcp/tests/: conftest.py  test_server.py
