[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kpi-mcp"
version = "0.1.0"
description = "FastMCP server exposing the KPI estimates data API as MCP tools."
requires-python = ">=3.12"
dependencies = [
    # Pinned exactly so a fresh install reproduces the tested version.
    "fastmcp==3.3.1",
    # kpi-backend is the local backend package. It is installed editable from
    # ../backend in the same `pip install -e ./backend -e ./mcp` command, so this
    # dependency resolves locally and is never fetched from PyPI. It carries no
    # PyPI version, so it is referenced by name only.
    "kpi-backend",
]

[project.optional-dependencies]
# Test and lint tooling, kept out of the runtime dependency set. Pinned exactly,
# for the same reproducibility reason as the runtime set.
dev = [
    "ruff==0.15.13",
    "pytest==9.0.3",
]

[tool.setuptools]
# server.py is a single top-level module, not a package.
py-modules = ["server"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
# `app` is the backend package imported in-process by the server, and `server`
# is this package's own module imported by the tests. Mark both first-party so
# they sort into their own import group, as `app` does in the backend.
known-first-party = ["app", "server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
